# challenges

./: .gitignore
badoo/2015/10. Badoolization/: Makefile  Makefile.am  configure  configure.ac
badoo/2015/10. Badoolization/src/: Makefile  Makefile.am  helper.1.h  inputstate.cc  inputstate.h  main.cc
helper/: helper.1.h  helper.1.inc
uvaonlinejudge/: solve.cc  time.sh
uvaonlinejudge/10066 - The Twin Towers/: solve.cc
uvaonlinejudge/10067 - Playing with Wheels/: failed.solve.cc
uvaonlinejudge/10465 - Homer Simpson/: solve.cc
uvaonlinejudge/10937 - Blackbeard the Pirate/: solve.cc
uvaonlinejudge/13170 - Verbal arithmetic/: basic_io.cc  solve.cc
uvaonlinejudge/UVa000272_TeX_quotes/: solve.c
uvaonlinejudge/UVa00101 The Blocks Problem/: solve.cc
uvaonlinejudge/UVa00105 - The Skyline Problem/: solve.cc
uvaonlinejudge/UVa00151_Power_Crisis/: solve.cc
uvaonlinejudge/UVa00156_Ananagrams/: solve.cc
uvaonlinejudge/UVa00195_Anagrams/: solve.cc
uvaonlinejudge/UVa00196 - Spreadsheet/: solve.cc
uvaonlinejudge/UVa00208 - Firetruck/: solve.cc
uvaonlinejudge/UVa00305_Joseph/: precalc.py  solve.cc
uvaonlinejudge/UVa00318 - Domino Effect/: solve.cc
uvaonlinejudge/UVa00394_Mapmaker/: solve.cc
uvaonlinejudge/UVa00403_Postscript/: genfonts.py  hacked.in  hacked.out  sample.out  solve.c
uvaonlinejudge/UVa00416 - Led Test/: solve.cc
uvaonlinejudge/UVa00435 - Block Voting/: solve.cc
uvaonlinejudge/UVa00444 - Encoder and Decoder/: gen_encoder.py  gen_trie.py  solve.cc  submit.cc
uvaonlinejudge/UVa00469 - Wetlands of Florida/: solve.cc
uvaonlinejudge/UVa00482 - Permutation Arrays/: solve.cc
uvaonlinejudge/helper/: Makefile.am  configure.ac
uvaonlinejudge/helper/src/: helper.hpp  testing.cpp
uvaonlinejudge/helper/test/: Makefile.am  helper_test.cpp  readline.txt
(+157 files in other folders)
